# jmtest

./: Dockerfile  Makefile  README.md
jmtest/server/: server.py
jmtest/thrift-py/: CMakeLists.txt  TARGETS  add.thrift  run.sh  setup.py
jmtest/thrift-py/client/: TARGETS  TestClient.cpp
jmtest/thrift-py/cmake/: FindFBThrift.cmake  FindLibsodium.cmake
